# phishlens

./: .env.example  .gitignore  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
analyzer/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
analyzer/app/: __init__.py  analyzer.py  domain_intel.py  main.py  redirect_intel.py  schemas.py  tls_intel.py  url_guard.py
analyzer/tests/: test_analyze.py  test_domain_intel.py  test_redirect_intel.py  test_tls_intel.py  test_url_guard.py
web/: .dockerignore  .env.example  .prettierignore  Dockerfile  next.config.mjs  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: site-header.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/lib/: db.ts  env.ts  rate-limit.test.ts  rate-limit.ts  redis.ts  risk.test.ts  risk.ts
